--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -79,10 +79,11 @@
           android:textSize="18sp"
           android:textColor="#333333"
           android:text="광고 타이틀 자리입니다"
-          android:maxLines="1"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
           android:focusableInTouchMode="true"
           android:focusable="true"
-          android:ellipsize="end"
           android:layout_width="match_parent"
           android:layout_height="27dp"
           android:id="@+id/tv_advertise"/>
