--- a/app/src/main/res/layout/fragment_setting_cs.xml
+++ b/app/src/main/res/layout/fragment_setting_cs.xml
@@ -79,6 +79,7 @@
         android:background="#dadada"/>
 
       <FrameLayout
+          android:visibility="gone"
         android:id="@+id/fl_setting_cs_ad"
         android:layout_width="match_parent"
         android:layout_height="53dp"
