--- a/app/src/main/res/layout/item_question_time.xml
+++ b/app/src/main/res/layout/item_question_time.xml
@@ -57,7 +57,7 @@
 
           <com.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
-            android:text=""
+            android:text="1"
             android:textSize="18sp"
             android:textColor="@color/colorWhite"
             android:id="@+id/tv_question_hour"
@@ -74,7 +74,7 @@
 
           <com.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
-            android:text=""
+            android:text="10"
             android:textSize="18sp"
             android:textColor="@color/colorWhite"
             android:id="@+id/tv_question_minute"
@@ -104,6 +104,7 @@
       android:layout_height="wrap_content">
 
       <ImageButton
+          android:id="@+id/ibtn_today_refresh"
         android:background="@drawable/refresh_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
