푸시 대응 완료

--- a/app/src/main/res/layout/activity_point.xml
+++ b/app/src/main/res/layout/activity_point.xml
@@ -8,7 +8,7 @@
               android:weightSum="1">
 
   <FrameLayout
-    android:id="@+id/fl_signup"
+    android:id="@+id/fl_container_top"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="54dp">
