--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -6,7 +6,10 @@
               android:layout_height="match_parent">
 
   <!-- 상단바 -->
-  <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+  <FrameLayout
+    android:id="@+id/fl_company_container_top"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <com.puzi.puzi.ui.CustomScrollView
       android:id="@+id/sv_container"
