--- a/app/src/main/res/layout/activity_myworry_write.xml
+++ b/app/src/main/res/layout/activity_myworry_write.xml
@@ -7,6 +7,7 @@
   <!-- 상단바 -->
   <LinearLayout
     android:orientation="horizontal"
+    android:id="@+id/ll_container_top"
     android:layout_width="match_parent"
     android:background="@color/colorWhite"
     android:layout_height="54dp">
