--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -6,7 +6,7 @@
               android:weightSum="1">
 
   <FrameLayout
-    android:id="@+id/fl_setting"
+    android:id="@+id/fl_container_top"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="54dp">
@@ -35,12 +35,6 @@
     android:layout_width="match_parent"
     android:layout_height="1dp"/>
 
-  <ImageButton
-    android:id="@+id/ibtn_event_link"
-    android:background="#000000"
-    android:layout_width="match_parent"
-    android:layout_height="150dp"/>
-
   <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -49,6 +43,12 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
+
+      <ImageButton
+        android:id="@+id/ibtn_event_link"
+        android:background="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"/>
 
       <LinearLayout
         android:orientation="horizontal"
@@ -136,6 +136,7 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_marginTop="9dp"
+            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
