--- a/app/src/main/res/layout/activity_store_item.xml
+++ b/app/src/main/res/layout/activity_store_item.xml
@@ -9,6 +9,7 @@
 
   <!-- 상단바 -->
   <LinearLayout
+    android:id="@+id/ll_container_top"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:background="@color/colorWhite"
