--- a/app/src/main/res/layout/activity_store_saving.xml
+++ b/app/src/main/res/layout/activity_store_saving.xml
@@ -7,6 +7,7 @@
 
   <!-- 상단바 -->
   <LinearLayout
+    android:id="@+id/ll_container_top"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:background="#7b0f8b"
@@ -39,7 +40,7 @@
 
     <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       android:orientation="vertical">
 
       <LinearLayout
@@ -72,9 +73,9 @@
         android:scrollbars="none"
         android:overScrollMode="never"
         android:background="#00000000"
+        android:listSelector="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
 
     </LinearLayout>
 
