--- a/app/src/main/res/layout/item_store_challenge_item.xml
+++ b/app/src/main/res/layout/item_store_challenge_item.xml
@@ -71,10 +71,10 @@
       app:fontWeight="regular"
       android:text="itemName"
       android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="1"
+      android:layout_height="wrap_content"
       android:layout_marginStart="9dp"
       android:layout_marginEnd="9dp"
+      android:lines="2"
       android:textSize="14sp"
       android:textColor="#333333"
       android:id="@+id/iv_store_challenge_item_name"/>
