--- a/app/src/main/res/layout/item_store_saving_item.xml
+++ b/app/src/main/res/layout/item_store_saving_item.xml
@@ -73,12 +73,12 @@
       app:fontWeight="regular"
       android:text="itemName"
       android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="1"
+      android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       android:layout_marginStart="9dp"
       android:layout_marginEnd="9dp"
       android:textSize="14sp"
+      android:lines="2"
       android:textColor="#333333"
       android:id="@+id/tv_store_saving_item_name"/>
 
