--- a/app/src/main/res/layout/item_question_bonus.xml
+++ b/app/src/main/res/layout/item_question_bonus.xml
@@ -77,6 +77,12 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btn_rl"
+        android:background="@null"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
   </FrameLayout>
 
 </LinearLayout>
