--- a/app/src/main/res/layout/item_question_vote.xml
+++ b/app/src/main/res/layout/item_question_vote.xml
@@ -20,6 +20,44 @@
       android:layout_width="42dp"
       android:layout_height="42dp">
 
+      <ProgressBar
+          android:id="@+id/pg_worry"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:indeterminate="false"
+          style="?android:attr/progressBarStyleHorizontal"
+          android:background="@drawable/bg_worry_progress"
+          android:progressDrawable="@drawable/progress_worry"/>
+
+      <LinearLayout
+          android:gravity="center"
+          android:background="@drawable/bg_worry_percent"
+          android:orientation="horizontal"
+          android:layout_gravity="center"
+          android:layout_width="28dp"
+          android:layout_height="28dp">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+            android:gravity="center"
+            app:fontWeight="regular"
+            android:id="@+id/tv_worry_progress"
+            android:text="1"
+            android:textSize="10sp"
+            android:textColor="@color/colorPuzi"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+            android:gravity="center"
+            app:fontWeight="regular"
+            android:text="%"
+            android:textSize="6sp"
+            android:textColor="@color/colorPuzi"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
+      </LinearLayout>
+
     </FrameLayout>
 
     <LinearLayout
@@ -34,51 +72,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.puzi.puzi.ui.customview.NotoTextView
-            app:fontWeight="demilight"
-            android:background="@drawable/bg_question_type"
-            android:gravity="center"
-            android:padding="2dp"
-          android:text="여성"
-          android:textSize="10sp"
-          android:id="@+id/tv_vote_gender"
-          android:layout_width="30dp"
-          android:layout_height="16dp"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/lv_category"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:layout_toLeftOf="@+id/fl_vote_like"
+            android:layout_toStartOf="@+id/fl_vote_like"
+            app:layoutManager="LinearLayoutManager">
 
-        <com.puzi.puzi.ui.customview.NotoTextView
-            app:fontWeight="demilight"
-            android:background="@drawable/bg_question_type"
-            android:gravity="center"
-            android:padding="2dp"
-          android:text="10대"
-          android:textSize="10sp"
-          android:layout_marginLeft="6dp"
-          android:id="@+id/tv_vote_age"
-          android:layout_toRightOf="@id/tv_vote_gender"
-          android:layout_width="30dp"
-          android:layout_height="16dp"/>
+        </android.support.v7.widget.RecyclerView>
 
-        <ImageView
-          android:id="@+id/iv_vote_like"
-          android:background="@drawable/like"
-          android:layout_gravity="right"
-          android:layout_width="14dp"
-          android:layout_height="12dp"
-          android:layout_alignParentTop="true"
-          android:layout_toLeftOf="@+id/textView6"
-          android:layout_toStartOf="@+id/textView6"/>
+        <RelativeLayout
+            android:id="@+id/fl_vote_like"
+            android:layout_gravity="right"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="33dp"
+            android:layout_height="14dp">
 
-        <com.puzi.puzi.ui.customview.NotoTextView
-            app:fontWeight="demilight"
-          android:layout_gravity="right"
-          android:layout_width="17dp"
-          android:layout_height="14dp"
-          android:layout_alignParentTop="true"
-          android:layout_alignParentRight="true"
-          android:layout_alignParentEnd="true"
-          android:layout_marginRight="10dp"
-          android:layout_marginEnd="10dp"
-          android:id="@+id/textView6"/>
+          <ImageView
+              android:id="@+id/iv_vote_like"
+              android:background="@drawable/like"
+              android:layout_width="14dp"
+              android:layout_height="12dp"/>
+
+          <com.puzi.puzi.ui.customview.NotoTextView
+              android:id="@+id/tv_vote_like"
+              android:layout_width="17dp"
+              android:layout_height="14dp"
+              android:layout_alignParentEnd="true"
+              android:layout_alignParentRight="true"
+              android:layout_alignParentTop="true"
+              app:fontWeight="demilight" />
+
+        </RelativeLayout>
 
       </RelativeLayout>
 
