--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="@drawable/bg_main"
-              android:orientation="vertical" >
+              android:orientation="vertical">
+
+  <LinearLayout
+    android:layout_weight="105"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"/>
 
   <ImageView
     android:layout_gravity="center"
-    android:layout_marginTop="105dp"
     android:layout_width="125dp"
     android:layout_height="125dp"
     android:id="@+id/ibtn_bi"
@@ -15,57 +19,91 @@
     android:background="#00000000"
     android:src="@drawable/splash_logo"/>
 
-  <FrameLayout
+  <LinearLayout
+    android:layout_weight="179"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="0dp"/>
+
+  <com.puzi.puzi.ui.customview.NotoButton
+    app:fontWeight="medium"
+    android:text="이메일로 회원가입"
+    android:textColor="#ffffff"
+    android:id="@+id/btn_signup"
+    android:textSize="15sp"
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:background="@drawable/button_puzi"/>
+
+  <FrameLayout
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/button_kakao"
+    android:layout_width="match_parent"
+    android:layout_height="45dp">
 
     <LinearLayout
-      android:layout_marginBottom="53dp"
-      android:layout_gravity="bottom"
-      android:orientation="vertical"
-      android:layout_width="match_parent"
+      android:layout_gravity="center"
+      android:orientation="horizontal"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content">
 
-      <Button
-        android:id="@+id/btn_signup"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:background="@drawable/btn_email_login"/>
+      <ImageView
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/combined_shape"
+        android:layout_marginRight="10dp"
+        android:layout_width="18dp"
+        android:layout_height="16dp"/>
 
-      <Button
-        android:id="@+id/btn_kakao_login"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/btn_kakao_login"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"/>
-
-      <LinearLayout
-        android:id="@+id/ll_bar"
-        android:background="#80eeeeee"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:orientation="horizontal"
-        android:gravity="center">
-      </LinearLayout>
-
-      <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/btn_login_copy"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"/>
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="medium"
+        android:text="카카오 계정으로 로그인"
+        android:textColor="#3f211e"
+        android:textSize="15sp"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
+    <Button
+      android:id="@+id/btn_kakao_login"
+      android:layout_width="match_parent"
+      android:layout_height="45dp"
+      android:background="#00000000"/>
+
   </FrameLayout>
+
+  <LinearLayout
+    android:id="@+id/ll_bar"
+    android:background="#80eeeeee"
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:orientation="horizontal"
+    android:gravity="center">
+  </LinearLayout>
+
+  <com.puzi.puzi.ui.customview.NotoButton
+    app:fontWeight="medium"
+    android:text="로그인"
+    android:id="@+id/btn_login"
+    android:textColor="#ff2470"
+    android:textSize="15sp"
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:background="@drawable/button_login"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:layout_marginTop="10dp"/>
+
+  <LinearLayout
+    android:layout_weight="53"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"/>
 
 </LinearLayout>
