--- a/app/src/main/res/layout/item_store_brand_group.xml
+++ b/app/src/main/res/layout/item_store_brand_group.xml
@@ -20,6 +20,7 @@
     android:listSelector="@android:color/transparent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     android:numColumns="4"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
