--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -111,16 +111,12 @@
         android:layout_height="50dp">
 
         <ImageButton
-          android:paddingRight="17dp"
-          android:paddingLeft="8dp"
-          android:paddingTop="12.5dp"
-          android:paddingBottom="12.5dp"
-          android:layout_width="37dp"
+          android:layout_gravity="left|center"
+          android:layout_width="50dp"
           android:layout_height="match_parent"
-          android:background="#00000000"
+          android:background="@null"
           android:src="@drawable/back"
-          android:id="@+id/btn_back_profile"
-          android:backgroundTint="#000000"/>
+          android:id="@+id/btn_back_profile"/>
 
         <com.joooonho.SelectableRoundedImageView
           xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -158,7 +154,7 @@
           android:layout_gravity="right|center_vertical"
           android:src="@drawable/more_button"
           android:background="#00000000"
-          android:layout_width="45dp"
+          android:layout_width="50dp"
           android:layout_height="45dp"/>
 
       </LinearLayout>
