--- a/app/src/main/res/layout/activity_editors_page_webview.xml
+++ b/app/src/main/res/layout/activity_editors_page_webview.xml
@@ -16,14 +16,11 @@
       android:layout_height="54dp">
 
       <ImageButton
-        android:layout_width="40dp"
+        android:layout_gravity="left|center"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:background="@null"
         android:src="@drawable/back"
-        android:background="#00000000"
         android:id="@+id/ibtn_channel_editors_page_back"/>
 
       <com.puzi.puzi.ui.customview.NotoTextView
