--- a/app/src/main/res/layout/activity_event_page_webview.xml
+++ b/app/src/main/res/layout/activity_event_page_webview.xml
@@ -16,14 +16,11 @@
       android:layout_height="54dp">
 
       <ImageButton
-        android:layout_width="40dp"
+        android:layout_gravity="left|center"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:background="@null"
         android:src="@drawable/back"
-        android:background="#00000000"
         android:id="@+id/ibtn_event_page_back"/>
 
       <com.puzi.puzi.ui.customview.NotoTextView
@@ -33,7 +30,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textColor="#333333"
-        android:layout_marginRight="40dp"
+        android:layout_marginRight="50dp"
         android:textSize="16sp"
         android:layout_gravity="center_vertical"
         android:id="@+id/tv_event_page_title"
