--- a/app/src/main/res/layout/activity_myworry_write.xml
+++ b/app/src/main/res/layout/activity_myworry_write.xml
@@ -13,23 +13,19 @@
     android:layout_height="54dp">
 
     <ImageButton
-      android:paddingRight="17dp"
-      android:paddingLeft="8dp"
-      android:paddingTop="12.5dp"
-      android:paddingBottom="12.5dp"
-      android:layout_width="37dp"
+      android:layout_gravity="left|center"
+      android:layout_width="50dp"
       android:layout_height="match_parent"
-      android:background="#00000000"
+      android:background="@null"
       android:src="@drawable/back"
-      android:id="@+id/ibtn_back"
-      android:backgroundTint="#000000"/>
+      android:id="@+id/ibtn_back"/>
 
     <com.puzi.puzi.ui.customview.NotoTextView
       app:fontWeight="regular"
       android:text="질문 작성하기"
       android:id="@+id/tv_store_purchase_title"
       android:gravity="center"
-      android:layout_marginEnd="37dp"
+      android:layout_marginRight="50dp"
       android:textSize="20sp"
       android:textColor="#333333"
       android:layout_width="match_parent"
