--- a/app/src/main/res/layout/activity_store_saving_detail.xml
+++ b/app/src/main/res/layout/activity_store_saving_detail.xml
@@ -27,22 +27,18 @@
           android:layout_height="54dp">
 
           <ImageButton
-            android:paddingRight="17dp"
-            android:paddingLeft="8dp"
-            android:paddingTop="12.5dp"
-            android:paddingBottom="12.5dp"
-            android:layout_width="37dp"
+            android:layout_gravity="left|center"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:background="#00000000"
+            android:background="@null"
             android:src="@drawable/back"
-            android:id="@+id/btn_store_saving_back"
-            android:backgroundTint="#000000"/>
+            android:id="@+id/btn_store_saving_back"/>
 
           <com.puzi.puzi.ui.customview.NotoTextView
             android:text="푸지적금"
             app:fontWeight="medium"
             android:gravity="center"
-            android:layout_marginEnd="37dp"
+            android:layout_marginRight="50dp"
             android:textSize="20sp"
             android:textColor="#333333"
             android:layout_width="match_parent"
@@ -142,15 +138,28 @@
             android:layout_width="81dp"
             android:layout_height="wrap_content"/>
 
-          <Spinner
-            android:padding="0dp"
-            android:gravity="center"
-            android:layout_marginLeft="10dp"
+          <FrameLayout
             android:layout_gravity="center_vertical"
-            android:id="@+id/sp_store_saving_daily_point"
-            android:background="@drawable/button_store_withdraw_input"
-            android:layout_width="91dp"
-            android:layout_height="35dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_width="121dp"
+            android:layout_height="35dp">
+
+            <Spinner
+              android:padding="0dp"
+              android:gravity="center"
+              android:id="@+id/sp_store_saving_daily_point"
+              android:background="@drawable/button_store_withdraw_input"
+              android:layout_width="match_parent"
+              android:layout_height="35dp"/>
+
+            <ImageView
+              android:layout_gravity="right|center_vertical"
+              android:layout_marginRight="17.2dp"
+              android:src="@drawable/back_chevron_down"
+              android:layout_width="13dp"
+              android:layout_height="6.7dp"/>
+
+          </FrameLayout>
 
         </LinearLayout>
 
@@ -195,7 +204,7 @@
 
             <com.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="demilight"
-              android:text="text"
+              android:text=""
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:textSize="12sp"
@@ -225,7 +234,7 @@
 
             <com.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="demilight"
-              android:text="TextView"
+              android:text=""
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:textSize="12sp"
