--- a/app/src/main/res/layout/activity_store_saving_detail_mine.xml
+++ b/app/src/main/res/layout/activity_store_saving_detail_mine.xml
@@ -27,16 +27,12 @@
           android:layout_height="54dp">
 
           <ImageButton
-            android:paddingRight="17dp"
-            android:paddingLeft="8dp"
-            android:paddingTop="12.5dp"
-            android:paddingBottom="12.5dp"
-            android:layout_width="37dp"
+            android:layout_gravity="left|center"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:background="#00000000"
+            android:background="@null"
             android:src="@drawable/back"
-            android:id="@+id/btn_store_saving_mine_back"
-            android:backgroundTint="#000000"/>
+            android:id="@+id/btn_store_saving_mine_back"/>
 
           <com.puzi.puzi.ui.customview.NotoTextView
             android:text="나의 푸지적금"
@@ -53,7 +49,7 @@
             android:layout_gravity="right|center_vertical"
             android:src="@drawable/more_button"
             android:background="#00000000"
-            android:layout_width="45dp"
+            android:layout_width="50dp"
             android:layout_height="45dp"/>
 
         </LinearLayout>
@@ -246,16 +242,30 @@
             android:layout_width="81dp"
             android:layout_height="wrap_content"/>
 
-          <Spinner
-            android:padding="0dp"
-            android:gravity="center"
+          <FrameLayout
             android:layout_marginLeft="10dp"
             android:layout_marginRight="16dp"
             android:layout_gravity="center_vertical"
-            android:id="@+id/sp_store_saving_mine_daily_point"
-            android:background="@drawable/button_store_withdraw_input"
-            android:layout_width="91dp"
-            android:layout_height="35dp"/>
+            android:gravity="center"
+            android:padding="0dp"
+            android:layout_width="121dp"
+            android:layout_height="35dp">
+
+            <Spinner
+              android:id="@+id/sp_store_saving_mine_daily_point"
+              android:background="@drawable/button_store_withdraw_input"
+              android:gravity="center"
+              android:layout_width="match_parent"
+              android:layout_height="35dp"/>
+
+            <ImageView
+              android:layout_gravity="right|center_vertical"
+              android:layout_marginRight="17.2dp"
+              android:src="@drawable/back_chevron_down"
+              android:layout_width="13dp"
+              android:layout_height="6.7dp"/>
+
+          </FrameLayout>
 
           <com.puzi.puzi.ui.customview.NotoButton
             app:fontWeight="bold"
