--- a/app/src/main/res/layout/fragment_channel_detail.xml
+++ b/app/src/main/res/layout/fragment_channel_detail.xml
@@ -26,16 +26,12 @@
         android:layout_height="53dp">
 
         <ImageButton
-          android:paddingRight="17dp"
-          android:paddingLeft="8dp"
-          android:paddingTop="12.5dp"
-          android:paddingBottom="12.5dp"
-          android:layout_width="37dp"
+          android:layout_gravity="left|center"
+          android:layout_width="50dp"
           android:layout_height="match_parent"
-          android:background="#00000000"
+          android:background="@null"
           android:src="@drawable/back"
-          android:id="@+id/ibtn_chanenl_detail_back"
-          android:backgroundTint="#000000"/>
+          android:id="@+id/ibtn_chanenl_detail_back"/>
 
         <com.joooonho.SelectableRoundedImageView
           xmlns:app="http://schemas.android.com/apk/res-auto"
