--- a/app/src/main/res/layout/fragment_signup_info.xml
+++ b/app/src/main/res/layout/fragment_signup_info.xml
@@ -137,9 +137,9 @@
           <ImageView
             android:layout_gravity="right|center_vertical"
             android:layout_marginRight="17.2dp"
-            android:src="@drawable/back_chevron_down"
-            android:layout_width="30dp"
-            android:layout_height="19.8dp"/>
+            android:src="@drawable/down_buton2"
+            android:layout_width="13dp"
+            android:layout_height="6.7dp"/>
           
         </FrameLayout>
 
@@ -184,8 +184,8 @@
               android:layout_gravity="right|center_vertical"
               android:layout_marginRight="17.2dp"
               android:src="@drawable/back_chevron_down"
-              android:layout_width="30dp"
-              android:layout_height="19.8dp"/>
+              android:layout_width="13dp"
+              android:layout_height="6.7dp"/>
 
           </FrameLayout>
 
@@ -208,8 +208,8 @@
               android:layout_gravity="right|center_vertical"
               android:layout_marginRight="17.2dp"
               android:src="@drawable/back_chevron_down"
-              android:layout_width="30dp"
-              android:layout_height="19.8dp"/>
+              android:layout_width="13dp"
+              android:layout_height="6.7dp"/>
 
           </FrameLayout>
 
