--- a/app/src/main/res/layout/fragment_setting_cs_out.xml
+++ b/app/src/main/res/layout/fragment_setting_cs_out.xml
@@ -32,7 +32,7 @@
       <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@mipmap/level"
+        android:src="@drawable/welcome_icon"
         android:id="@+id/iv_out_level"/>
 
       <TextView
