--- a/app/src/main/res/layout/view_screen_on_alert.xml
+++ b/app/src/main/res/layout/view_screen_on_alert.xml
@@ -5,6 +5,7 @@
              android:background="#00000000"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
+             android:id="@+id/fl_container"
              android:layout_gravity="top">
 
   <Button
@@ -15,8 +16,9 @@
     android:id="@+id/btn_top" />
 
   <LinearLayout
-    android:orientation="horizontal"
+    android:id="@+id/ll_view_container"
     android:layout_marginTop="24dp"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:background="#fff8fa"
     android:layout_height="70dp">
