--- a/app/src/main/res/layout/fragment_setting_favorites.xml
+++ b/app/src/main/res/layout/fragment_setting_favorites.xml
@@ -47,7 +47,7 @@
             android:id="@+id/btn_setting_beauty"
             android:text="뷰티"
             android:textSize="16sp"
-            android:textColor="#dadada"
+            android:textColor="@color/colorTextGray"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -59,7 +59,7 @@
             android:id="@+id/btn_setting_shopping"
             android:text="쇼핑"
             android:textSize="16sp"
-            android:textColor="#dadada"
+            android:textColor="@color/colorTextGray"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -79,7 +79,7 @@
             android:id="@+id/btn_setting_game"
             android:text="게임"
             android:textSize="16sp"
-            android:textColor="#dadada"
+            android:textColor="@color/colorTextGray"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -91,7 +91,7 @@
             android:id="@+id/btn_setting_eat"
             android:text="외식"
             android:textSize="16sp"
-            android:textColor="#dadada"
+            android:textColor="@color/colorTextGray"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -111,7 +111,7 @@
             android:id="@+id/btn_setting_tour"
             android:text="여행\n(항공,호텔)"
             android:textSize="16sp"
-            android:textColor="#dadada"
+            android:textColor="@color/colorTextGray"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -123,7 +123,7 @@
             android:id="@+id/btn_setting_finance"
             android:text="금융\n(보험,제테크)"
             android:textSize="16sp"
-            android:textColor="#dadada"
+            android:textColor="@color/colorTextGray"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -143,7 +143,7 @@
             android:id="@+id/btn_setting_culture"
             android:text="문화\n(콘서트,공연)"
             android:textSize="16sp"
-            android:textColor="#dadada"
+            android:textColor="@color/colorTextGray"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -155,7 +155,7 @@
             android:visibility="invisible"
             android:background="@drawable/button_favorite_off"
             android:textSize="16sp"
-            android:textColor="#dadada"
+            android:textColor="@color/colorTextGray"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:layout_width="0dp"
