--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -37,6 +37,7 @@
     android:background="@drawable/button_puzi"/>
 
   <FrameLayout
+    android:id="@+id/fl_kakao_login_container"
     android:layout_marginLeft="40dp"
     android:layout_marginRight="40dp"
     android:layout_marginTop="10dp"
