--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:background="@null"
+              android:background="@color/colorWhite"
               android:orientation="vertical">
 
   <FrameLayout
@@ -44,7 +44,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
+    <com.puzi.puzi.ui.customview.NotoEditText
+      app:fontWeight="regular"
       android:background="@drawable/edittext"
       android:id="@+id/login_et_id"
       android:layout_width="match_parent"
@@ -61,7 +62,8 @@
       android:textColor="@color/colorGray"
       android:textSize="13.5sp"/>
 
-    <EditText
+    <com.puzi.puzi.ui.customview.NotoEditText
+      app:fontWeight="regular"
       android:background="@drawable/edittext"
       android:id="@+id/edit_login_pw"
       android:layout_width="match_parent"
