--- a/app/src/main/res/drawable/bg_vote_item_pink.xml
+++ b/app/src/main/res/drawable/bg_vote_item_pink.xml
@@ -6,7 +6,7 @@
         android:width="1dp"
         android:color="#dadada"/>
       <solid
-        android:color="@color/colorWhite"/>
+        android:color="#0cff2470"/>
       <corners
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp"
