--- a/app/src/main/res/layout/view_point_save.xml
+++ b/app/src/main/res/layout/view_point_save.xml
@@ -42,6 +42,7 @@
 
             <com.puzi.puzi.ui.customview.NotoTextView
                 app:fontWeight="medium"
+                android:id="@+id/tv_view_point_plus"
                 android:text="+"
                 android:textSize="20sp"
                 android:textColor="#ff2470"
@@ -59,6 +60,7 @@
 
             <com.puzi.puzi.ui.customview.NotoTextView
                 app:fontWeight="medium"
+                android:id="@+id/tv_view_point_p"
                 android:text="P"
                 android:textSize="20sp"
                 android:textColor="#ff2470"
