--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -11,6 +11,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:layout_weight="0.01"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
@@ -39,19 +40,13 @@
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-      android:layout_weight="0.1">
-
-    </View>
-
     <LinearLayout
-        android:layout_weight="0.9"
+        android:layout_weight="0.98"
+        android:layout_marginTop="30dp"
       android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:orientation="vertical">
 
       <com.puzi.puzi.ui.customview.NotoTextView
@@ -85,6 +80,7 @@
         <com.puzi.puzi.ui.customview.NotoTextView
             android:id="@+id/tv_answer_like"
           android:layout_gravity="center_vertical"
+            android:gravity="center"
           android:layout_marginRight="14dp"
           app:fontWeight="regular"
           android:text="510"
@@ -98,7 +94,7 @@
       <View
           android:layout_width="match_parent"
           android:layout_height="0dp"
-        android:layout_weight="0.5">
+        android:layout_weight="0.3">
 
       </View>
 
@@ -119,7 +115,7 @@
 
         <com.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="bold"
-          android:text="명"
+          android:text="명 "
           android:textSize="16sp"
           android:textColor="@color/colorWhite"
           android:layout_width="wrap_content"
@@ -152,66 +148,65 @@
 
       </LinearLayout>
 
-      <View
-          android:layout_weight="0.9"
-          android:layout_width="match_parent"
-          android:layout_height="0dp"/>
-
       <LinearLayout
         android:orientation="vertical"
           android:gravity="center"
-          android:layout_weight="0.9"
+          android:layout_weight="0.7"
         android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_weight="0.5"
           android:orientation="horizontal"
           android:layout_marginBottom="10dp"
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="0dp">
 
           <Button
             android:background="@drawable/button_question_off"
+              android:textColor="@color/colorBlack"
               android:id="@+id/btn_answer_1"
             android:layout_weight="0.5"
             android:layout_marginRight="9dp"
             android:layout_width="0dp"
-            android:layout_height="113dp"/>
+            android:layout_height="match_parent"/>
 
           <Button
             android:background="@drawable/button_question_off"
+              android:textColor="@color/colorBlack"
               android:id="@+id/btn_answer_2"
             android:layout_weight="0.5"
             android:layout_marginLeft="9dp"
             android:layout_width="0dp"
-            android:layout_height="113dp"/>
+            android:layout_height="match_parent"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:id="@+id/ll_answer_container_2"
           android:orientation="horizontal"
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="0dp">
 
           <Button
             android:background="@drawable/button_question_off"
+              android:textColor="@color/colorBlack"
               android:id="@+id/btn_answer_3"
             android:layout_weight="0.5"
             android:layout_marginRight="9dp"
             android:layout_width="0dp"
-            android:layout_height="113dp"/>
+            android:layout_height="match_parent"/>
 
           <Button
             android:background="@drawable/button_question_off"
+              android:textColor="@color/colorBlack"
               android:id="@+id/btn_answer_4"
             android:layout_weight="0.5"
             android:layout_marginLeft="9dp"
             android:layout_width="0dp"
-            android:layout_height="113dp"/>
+            android:layout_height="match_parent"/>
 
         </LinearLayout>
       </LinearLayout>
