--- a/app/src/main/res/layout/item_spinner_down.xml
+++ b/app/src/main/res/layout/item_spinner_down.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:gravity="center_vertical"
-              android:padding="5dp"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center_vertical"
+    android:paddingLeft="7dp"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-  <TextView
-    android:id="@+id/spinnerText"
-    android:textSize="15sp"
-    android:textColor="#000"
-    android:alpha="0.87"
-    android:paddingLeft="13dp"
-    android:textColorHint="#1f000000"
-    android:gravity="center"
-    android:layout_weight="1"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent" />
+  <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="regular"
+      android:gravity="center_vertical"
+      android:id="@+id/tv_spinner_down"
+      android:layout_width="wrap_content"
+      android:layout_height="22dp"
+      android:textSize="10sp"
+      android:textColor="#6d6d6d"/>
 
 </LinearLayout>
