--- a/app/src/main/res/layout/item_spinner_normal.xml
+++ b/app/src/main/res/layout/item_spinner_normal.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:gravity="center_vertical"
-              android:paddingLeft="13dp"
-              android:paddingRight="13dp"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-  <TextView
-    android:id="@+id/spinnerText"
-    android:textSize="15sp"
-    android:textColor="#000"
-    android:alpha="0.87"
-    android:paddingLeft="13dp"
-    android:textColorHint="#1f000000"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:layout_weight="1"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent" />
+    android:paddingLeft="7dp"
+    android:paddingRight="3dp"
+    android:orientation="horizontal"
+    android:background="@drawable/bg_spinner"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+  <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="regular"
+      android:id="@+id/tv_spinner_normal"
+      android:gravity="center_vertical"
+      android:layout_weight="0.9"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:textSize="10sp"
+      android:textColor="#6d6d6d"/>
+
+  <ImageView
+      android:layout_weight="0.1"
+      android:src="@drawable/triangle_2"
+      android:layout_height="wrap_content"
+      android:layout_width="wrap_content" />
 
 </LinearLayout>
