--- a/app/src/main/res/layout/item_spinner_down.xml
+++ b/app/src/main/res/layout/item_spinner_down.xml
@@ -12,7 +12,7 @@
       android:gravity="center_vertical"
       android:id="@+id/tv_spinner_down"
       android:layout_width="wrap_content"
-      android:layout_height="22dp"
+      android:layout_height="match_parent"
       android:textSize="10sp"
       android:textColor="#6d6d6d"/>
 
