--- a/app/src/main/res/layout/activity_store_coupon.xml
+++ b/app/src/main/res/layout/activity_store_coupon.xml
@@ -41,7 +41,7 @@
   <com.puzi.puzi.ui.CustomScrollView
     android:id="@+id/sv_coupon"
     android:layout_width="match_parent" 
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:isScrollContainer="true">
 
     <LinearLayout
@@ -90,7 +90,6 @@
         android:id="@+id/gv_coupon"
         android:numColumns="2"
         android:scrollbars="none"
-        android:overScrollMode="never"
         android:background="#00000000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
@@ -138,7 +137,6 @@
             android:id="@+id/gv_used_coupon"
             android:numColumns="2"
             android:scrollbars="none"
-            android:overScrollMode="never"
             android:background="#00000000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
