--- a/app/src/main/res/layout/item_question_vote.xml
+++ b/app/src/main/res/layout/item_question_vote.xml
@@ -5,7 +5,8 @@
               android:layout_width="match_parent"
               android:descendantFocusability="blocksDescendants"
               android:layout_height="73dp"
-              android:paddingBottom="10dp">
+              android:paddingTop="5dp"
+              android:paddingBottom="5dp">
 
   <LinearLayout
     android:id="@+id/ll_question_bg"
