--- a/app/src/main/res/layout/item_spinner_down.xml
+++ b/app/src/main/res/layout/item_spinner_down.xml
@@ -5,7 +5,7 @@
     android:paddingLeft="7dp"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="22dp">
 
   <com.puzi.puzi.ui.customview.NotoTextView
       app:fontWeight="regular"
